# telangana-pharmacy-council-data

./: .env.example  .gitignore  AUTOMATIC_SETUP.md  AUTOMATION.md  CONTRIBUTING.md  DEPLOYMENT.md  FILE_DOCUMENTATION.md  LICENSE  Makefile  README.md  SUPABASE_STATUS.md  analyze_results.py  backup_script.sh  debug_response.html  extractor.py  fetch_details.py  fetch_first_10.py  fetch_manual.py  photo_demo.html  pyproject.toml  reader.py  readmeupdater.py  requirements.txt  responsible_scraper.py  rxsync.py  setup_email.py  test_enhanced_extraction.py  test_fetch_single.py  test_search.py  update_readme.py
.github/workflows/: daily-update.yml  detailed-extraction.yml  health-check.yml  lock-readme.yml  rx-sync.yml  test-email.yml
api/: README.md  app.py
data/backups/: rx_backup_20251106_010418.json.sha256
data/detailed/: TS000001.json  TS000002.json  TS000003.json  TS000004.json  TS000005.json  TS000006.json  TS000007.json  TS000008.json  TS000009.json  TS000010.json  TS000011.json
data/metadata/: extraction-status.json
debug/: TS000001_raw.html  TS000002_raw.html  TS000003_raw.html  TS000004_raw.html  TS000005_raw.html
deployment/: install.sh  tgpc-automation.service
docs/: README.md  SUPABASE_SETUP.md  index.html  login.html  search.js
scripts/: daily-cron-update.sh  init_database.py  standalone-updater.py  supabase_setup.sql  sync_to_supabase.py  test_supabase.py  update_analytics.py  verify_supabase.py
tests/: sanity.py  test_reader.py
tgpc/: __init__.py  __main__.py  manager.py  scraper.py  utils.py
web/: README.md  index.html
(+33 files in other folders)
