[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tgpc-data-extraction"
version = "2.0.0"
description = "Minimal TGPC data extraction system"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests==2.31.0",
    "beautifulsoup4==4.12.3",
    "rich==13.7.1",
    "tenacity==8.2.3",
    "supabase==2.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tgpc*"]